--- a/.env
+++ b/.env
@@ -2,8 +2,10 @@ NODE_ENV=development
 PORT=3000
 
 # DB credentials
-DB_USERNAME=postgres
-DB_PASSWORD=postgres
+DB_USERNAME=thiwnhco
+DB_PASSWORD=3W4zNPIDTmLuB_pjTUymvz0HW_BbIMqE
 DB_NAME=StaffSyncDB
 DB_HOST=localhost
 DB_PORT=5432
+
+
