--- a/.env
+++ b/.env
@@ -2,10 +2,11 @@ NODE_ENV=development
 PORT=3000
 
 # DB credentials
-DB_USERNAME=thiwnhco
-DB_PASSWORD=3W4zNPIDTmLuB_pjTUymvz0HW_BbIMqE
-DB_NAME=StaffSyncDB
+DB_USERNAME=postgres
+DB_PASSWORD=Nilan2000328
+DB_NAME=postgres
 DB_HOST=localhost
 DB_PORT=5432
 
-
+JWT_SECRET_KEY=kavi123
+JWT_EXPIRES_IN=7d
