--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "staffsync-backend": "file:"
   },
   "devDependencies": {
     "sequelize-cli": "^6.6.2"
