--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.7",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "chalk": "^5.3.0",
     "cors": "^2.8.5",
     "dot-env": "^0.0.1",
     "dotenv": "^16.4.5",
