--- a/.env
+++ b/.env
@@ -10,3 +10,7 @@ DB_PORT=5432
 
 JWT_SECRET_KEY=kavi123
 JWT_EXPIRES_IN=7d
+
+CLOUDINARY_CLOUD_NAME=dxoyfttuj
+CLOUDINARY_API_KEY=955612828956314
+CLOUDINARY_API_SECRET=0phn-D7W7PlckD2ENN4t8d-haA8
