--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "chalk": "^5.3.0",
+    "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "dot-env": "^0.0.1",
     "dotenv": "^16.4.5",
