--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "staffsync-backend": "file:"
   },
   "devDependencies": {
+    "@types/multer": "^1.4.12",
     "sequelize-cli": "^6.6.2"
   }
 }
